# ai-net

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/: .env.example  package-lock.json  (+2 more)
smart-contracts/contracts/agent_registry/: Cargo.toml
smart-contracts/contracts/agent_registry/src/: events.rs  lib.rs
smart-contracts/contracts/agent_registry/test_snapshots/test/: caller_cannot_impersonate_another_contract_without_being_the_real_invoker.1.json  cross_contract_cascade_stays_within_conservative_budget.1.json  cross_contract_cascade_stays_within_conservative_budget.2.json  deregister_agent_emits_event.1.json  deregister_cascades_to_error_resolver.1.json  deregister_removes_from_index.1.json  deregister_succeeds_even_if_resolver_rejects_the_call.1.json  deregister_wrong_signer_is_unauthorized.1.json  freeze_agent_blocks_register.1.json  freeze_agent_blocks_update_pricing.1.json  get_agent_health_reports_error_count_from_resolver.1.json  get_agent_health_without_resolver_configured_defaults_to_zero.1.json  is_agent_frozen_reflects_state.1.json  is_paused_reflects_state.1.json  lookup_multiple_agents_same_capability.1.json  non_admin_cannot_unpause.1.json  pause_blocks_deregister_agent.1.json  pause_blocks_register_agent.1.json  pause_blocks_update_pricing.1.json  register_agent_emits_event.1.json  register_agents_batch_success.1.json  register_agents_duplicate_ids_in_batch.1.json  register_agents_partial_failure_is_atomic.1.json  register_and_lookup.1.json  register_duplicate_returns_error.1.json  resolve_errors_already_resolved_fails_atomically.1.json  resolve_errors_batch_success.1.json  resolve_errors_partial_failure_is_atomic.1.json  set_admin_changes_admin.1.json  set_error_resolver_stores_address.1.json  unfreeze_agent_allows_operations.1.json  unpause_allows_operations.1.json  update_pricing_changes_price_and_emits_event.1.json  update_status_works_and_emits_event.1.json
smart-contracts/contracts/agent_registry/tests/: integration.rs
smart-contracts/contracts/error-resolver/: Cargo.toml
smart-contracts/contracts/error-resolver/src/: agent_errors.rs  lib.rs
smart-contracts/contracts/error-resolver/test_snapshots/agent_errors/test/: admin_can_manage_allowlist.1.json  clear_resets_count_to_zero.1.json  error_count_for_unknown_agent_is_zero.1.json  record_and_query_error_count.1.json  unauthorized_caller_cannot_record.1.json
(+89 files in other folders)
