[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=22.0.11" }
error-resolver = { path = "../error-resolver", default-features = false, features = ["contract"] }

[dev-dependencies]
soroban-sdk = { version = "=22.0.11", features = ["testutils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
