[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=22.0.11" }

[dev-dependencies]
soroban-sdk = { version = "=22.0.11", features = ["testutils"] }
# Test-only: the real resolver contract is registered in the test Env. Kept out
# of [dependencies] so its exported symbols never link into this contract's wasm.
error-resolver = { path = "../error-resolver", default-features = false, features = ["contract"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
